--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,17 +1,30 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  margin-bottom: 5px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
+.plants {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant {
+  max-width: 200px;
+  /* flex: 0 0 200px; */
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
